Fix slider thumb positioning - add margin-left offset to align thumb at end of progress line

--- a/css/style.css
+++ b/css/style.css
@@ -1804,6 +1804,7 @@ h4 {
   transition: all 0.2s ease;
   position: relative;
   z-index: 10;
+  margin-left: -12px;
 }
 
 .calc-slider::-webkit-slider-thumb:hover {
@@ -1826,6 +1827,7 @@ h4 {
   transition: all 0.2s ease;
   position: relative;
   z-index: 10;
+  margin-left: -12px;
 }
 
 .calc-slider::-moz-range-thumb:hover {
